--- a/package.json
+++ b/package.json
@@ -9,25 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/native": "^7.1.4",
     "@react-navigation/stack": "^7.2.8",
     "eslint-define-config": "^2.1.0",
-    "expo": "~52.0.46",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-location": "^18.0.10",
-    "expo-status-bar": "~2.0.1",
-    "firebase": "^11.6.0",
+    "expo": "^53.0.9",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-location": "~18.1.5",
+    "expo-status-bar": "~2.2.3",
+    "firebase": "^11.7.1",
     "firebase-admin": "^13.2.0",
     "firebase-functions": "^6.3.2",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "1.18.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
