--- a/package.json
+++ b/package.json
@@ -1,1 +1,38 @@
-{"name":"skinova","version":"1.0.0","main":"index.js","scripts":{"start":"expo start","android":"expo start --android","ios":"expo start --ios","web":"expo start --web"},"dependencies":{"@react-native-async-storage/async-storage":"^2.1.2","@react-native-community/datetimepicker":"8.3.0","@react-navigation/native":"^7.1.4","@react-navigation/stack":"^7.2.8","eslint-define-config":"^2.1.0","expo":"^53.0.9","expo-linear-gradient":"~14.1.4","expo-location":"~18.1.5","expo-status-bar":"~2.2.3","firebase":"^11.7.1","firebase-admin":"^13.2.0","firebase-functions":"^6.3.2","react":"19.0.0","react-native":"0.79.2","react-native-dotenv":"^3.4.11","react-native-gesture-handler":"~2.24.0","react-native-maps":"1.20.1","react-native-reanimated":"~3.17.4","react-native-safe-area-context":"5.4.0","react-native-screens":"~4.10.0","react-native-vector-icons":"^10.2.0"},"devDependencies":{"@babel/core":"^7.20.0"},"private":true}
+{
+  "name": "skinova",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-navigation/native": "^7.1.4",
+    "@react-navigation/stack": "^7.2.8",
+    "eslint-define-config": "^2.1.0",
+    "expo": "^53.0.10",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-location": "~18.1.5",
+    "expo-status-bar": "~2.2.3",
+    "firebase": "^11.7.1",
+    "firebase-admin": "^13.2.0",
+    "firebase-functions": "^6.3.2",
+    "react": "19.0.0",
+    "react-native": "0.79.3",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
+}
